--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My First Site</title>
+  <title>My Hacker Page</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <h1>Hello, I’m David</h1>
-  <p>This is my first website.</p>
+  <canvas id="hackerCanvas"></canvas>
 
-  <button>Click me</button>
+  <div class="content">
+    <h1>Welcome to My Main Page</h1>
+    <p>Click the button to explore</p>
+    <a href="index.html"><button>Click me</button></a>
+  </div>
 
+  <script src="script.js"></script>
 </body>
 </html>
