--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Hacker Page</title>
+  <title>Hacker Page</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -9,9 +9,11 @@
   <canvas id="hackerCanvas"></canvas>
 
   <div class="content">
-    <h1>Welcome to My Main Page</h1>
-    <p>Click the button to explore</p>
-    <a href="index.html"><button>Click me</button></a>
+    <h1>Welcome to My Hacker Page</h1>
+    <p>Click the button below to explore</p>
+
+    <!-- BUTTON -->
+    <a href="main.html" class="btn">Anime</a>
   </div>
 
   <script src="script.js"></script>
